src/components/dev-popover/style.module.css
.root {
  position: relative;
}

.button {
  background: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: none;
  color: inherit;
  cursor: pointer;
  display: block;
  font-family: inherit;
  font-size: inherit;
  margin: 0;
  padding: 0;
}

.label {
  color: #9c64aa;
  composes: g-type-label from global;
  padding-bottom: 0.75rem;
}

.note {
  color: #5b2668;
}

